--- a/AnaliseFilmes.ipynb
+++ b/AnaliseFilmes.ipynb
@@ -6,7 +6,7 @@
       "name": "AnaliseFilmes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnj6iQsdExXIiahb53lACC",
+      "authorship_tag": "ABX9TyNwOI9Bz9PPgqD5MOkNmQeR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1525,35 +1525,27 @@
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
-        "sns.boxplot(medias_por_filmes)"
+        "sns.boxplot(x = medias_por_filmes)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 351
+          "height": 296
         },
         "id": "ja3XIYctRp1g",
-        "outputId": "8c95c919-c276-4b1c-9751-ea6dfc2d397b"
+        "outputId": "dfb66275-dd8f-4d0c-b961-d2d2dc564723"
       },
-      "execution_count": 28,
+      "execution_count": 39,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/seaborn/_decorators.py:43: FutureWarning: Pass the following variable as a keyword arg: x. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
-            "  FutureWarning\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f554b19ec90>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5546b9e110>"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 39
         },
         {
           "output_type": "display_data",
